--- a/src/main/resources/templates/auth/signup.html
+++ b/src/main/resources/templates/auth/signup.html
@@ -25,8 +25,8 @@
      <input type="password" th:field="*{password}" placeholder="Password" /> <br/><br/>
     <select th:field="*{role}" required>
       <option value="">Select</option>
-      <option value="ADMIN">ADMIN</option>
-      <option value="USER">USER</option>
+      <option value="PROFESSOR">PROFESSOR</option>
+      <option value="STUDENT">STUDENT</option>
     </select> <br/><br/>
     
     <button type="submit" class="btn btn-info col-2">Register</button> 
