--- a/src/main/resources/templates/admin/dashboard.html
+++ b/src/main/resources/templates/admin/dashboard.html
@@ -18,15 +18,60 @@
 
   <h2>Welcome to User Dashboard</h2>
   
-  <br> <br> <hr> <br> <br>
+  <br> <br> <hr> <br>
   
   <h4>Logged as: <span sec:authentication="name"></span></h4>
   <h4>Has role: <span sec:authentication="authorities"></span></h4>
+    <br>
+  <div th:object="${professor}">
+      <h5>First Name: <span th:text="*{firstName}"></span></h5>
+      <h5>Last Name: <span th:text="*{lastName}"></span></h5>
+      <h5>Email: <span th:text="*{email}"></span></h5>
+      <br>
+      <a th:href="@{/admin/change}" class="btn btn-primary btn-sm mb-3">Update Information</a>
+  </div>
+
+
+    <table class="table table-bordered table-striped">
+        <thead class="thead-dark">
+        <tr>
+            <th>Title</th>
+            <th>Description</th>
+        </tr>
+        </thead>
+
+        <tbody>
+        <tr th:each="subject : ${subjectList}">
+
+            <td th:text="${subject.title}" />
+            <td th:text="${subject.description}" />
+            <td>
+                <!--
+                 Add "update" button/link
+                <a th:href="@{/employees/showFormForUpdate(employeeId=${tempEmployee.id})}"
+                   class="btn btn-info btn-sm">
+                    Update
+                </a>-->
+
+                <a th:href="@{/admin/delete-subject(subjectId=${subject.subjectId})}"
+                   class="btn btn-danger btn-sm"
+                   onclick="if (!(confirm('Are you sure you want to delete this employee?'))) return false">
+                    Delete
+                </a>
+
+            </td>
+        </tr>
+        </tbody>
+    </table>
+
+    <a th:href="@{/admin/create-subject}" class="btn btn-primary btn-sm mb-3">Create Subject</a>
+
 
 	<br> <br> <hr> <br> <br>
 
     <p>
     	<a th:href="@{/}" class="btn btn-primary btn-sm mb-3">Home</a>
+
     	<a th:href="@{/logout}" class="btn btn-danger btn-sm mb-3">Logout</a>
     
     </p>
