--- a/src/main/resources/templates/admin/professor-details.html
+++ b/src/main/resources/templates/admin/professor-details.html
@@ -9,30 +9,32 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
-	<title>Save Employee</title>
+	<title>Professor Information</title>
 </head>
 
 <body>
 	
 	<div class="container">
-	
-		<h3>Employee Directory</h3>
+
 		<hr>
-		
-		<p class="h4 mb-4">Save Employee </p>
+
+		<p class="h4 mb-4">Update Information </p>
 	
 		<form th:action="@{/admin/save_details}"
 						 th:object="${professor}" method="POST">
 		
 			<!-- Add hidden form field to handle update -->
 			<input type="hidden" th:field="*{pId}" />
-			
+
+			<label>First name:</label><br>
 			<input type="text" th:field="*{firstName}"
 					class="form-control mb-4 col-4" placeholder="First name">
 
+			<label>Last name:</label><br>
 			<input type="text" th:field="*{lastName}"
 					class="form-control mb-4 col-4" placeholder="Last name">
 
+			<label>E-mail:</label><br>
 			<input type="text" th:field="*{email}"
 					class="form-control mb-4 col-4" placeholder="Email">
 				
