--- a/src/main/resources/templates/admin/dashboard.html
+++ b/src/main/resources/templates/admin/dashboard.html
@@ -37,6 +37,7 @@
         <tr>
             <th>Title</th>
             <th>Description</th>
+            <th></th>
         </tr>
         </thead>
 
@@ -57,6 +58,11 @@
                    class="btn btn-danger btn-sm"
                    onclick="if (!(confirm('Are you sure you want to delete this employee?'))) return false">
                     Delete
+                </a>
+
+                <a th:href="@{/admin/applications(subjectId=${subject.subjectId})}"
+                   class="btn btn-info btn-sm">
+                   View Applications
                 </a>
 
             </td>
