--- a/src/main/resources/templates/user/dashboard.html
+++ b/src/main/resources/templates/user/dashboard.html
@@ -9,29 +9,49 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
-	<title>User Dashboard</title>
+    <title>User Dashboard</title>
 </head>
 
 
 <body>
 <div class="container">
 
-  <h2>Welcome to User Dashboard</h2>
-  
-  <br> <br> <hr> <br> <br>
-  
-  <h4>Logged as: <span sec:authentication="name"></span></h4>
-  <h4>Has role: <span sec:authentication="authorities"></span></h4>
+    <h2>Welcome to User Dashboard</h2>
 
-	<br> <br> <hr> <br> <br>
+    <br> <br> <hr> <br> <br>
+
+    <h4>Logged as: <span sec:authentication="name"></span></h4>
+    <h4>Has role: <span sec:authentication="authorities"></span></h4>
+
+
+    <br>
+
+    <div th:object="${student}">
+        <h5>First Name: <span th:text="*{firstName}"></span></h5>
+        <h5>Last Name: <span th:text="*{lastName}"></span></h5>
+        <h5>Email: <span th:text="*{email}"></span></h5>
+        <br>
+        <a th:href="@{/user/change}" class="btn btn-primary btn-sm mb-3">Update Information</a>
+        <a th:href="@{/user/available-subjects}" class="btn btn-primary btn-sm mb-3">Available Subjects</a>
+    </div>
+
+
+
+
+
+
+
+
+    <br> <br> <hr> <br> <br>
+
+
 
     <p>
-    	<a th:href="@{/}" class="btn btn-primary btn-sm mb-3">Home</a>
-    	<a th:href="@{/logout}" class="btn btn-danger btn-sm mb-3">Logout</a>
-    
+        <a th:href="@{/}" class="btn btn-primary btn-sm mb-3">Home</a>
+        <a th:href="@{/logout}" class="btn btn-danger btn-sm mb-3">Logout</a>
     </p>
 </div>
-  
-  
+
+
 </body>
 </html>
