Duct tape version upgrade

--- a/src/main/resources/templates/auth/signup.html
+++ b/src/main/resources/templates/auth/signup.html
@@ -23,6 +23,9 @@
     <h3>Registration</h3>
     <input type="text" th:field="*{username}" placeholder="User Name" /> <br/><br/>
      <input type="password" th:field="*{password}" placeholder="Password" /> <br/><br/>
+      <input type="text" name="firstName" placeholder="First Name" /> <br/><br/>
+      <input type="text" name="lastName" placeholder="Last Name" /> <br/><br/>
+      <input type="text" name="email" placeholder="E-mail" /> <br/><br/>
     <select th:field="*{role}" required>
       <option value="">Select</option>
       <option value="PROFESSOR">PROFESSOR</option>
@@ -33,9 +36,11 @@
     
     <a th:href="@{/login}" class="btn btn-primary col-2"> Login</a>
     
-    <div th:if="${param.error}"><p>Registration Error.</p></div> <br/>
+    <div th:if="${param.error}"><p>Registration Error.</p></div>
+      <br/>
     
     <span th:utext="${successMessage}"></span>
 </form>
+</div>
 </body>
 </html>
