--- a/src/main/resources/templates/admin/dashboard.html
+++ b/src/main/resources/templates/admin/dashboard.html
@@ -31,6 +31,8 @@
       <a th:href="@{/admin/change}" class="btn btn-primary btn-sm mb-3">Update Information</a>
   </div>
 
+    <span th:utext="${successMessage}" style="color:firebrick"></span>
+
     <h3>My assigned theses</h3>
     <table class="table table-bordered table-striped">
         <thead class="thead-dark">
@@ -60,6 +62,7 @@
         </tbody>
     </table>
 
+    <br>
 
     <h3>My Subjects</h3>
     <table class="table table-bordered table-striped">
