--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -34,12 +34,12 @@
     <br> <br> <hr> <br> <br>
     
     <p sec:authorize="hasAuthority('STUDENT')">
-    	<a th:href="@{/user/dashboard}" class="btn btn-primary btn-sm mb-3"> User Dashboard</a>
+    	<a th:href="@{/student/dashboard}" class="btn btn-primary btn-sm mb-3"> Student Dashboard</a>
     	<a th:href="@{/logout}" class="btn btn-danger btn-sm mb-3"> Logout</a>
     </p>
     
     <p sec:authorize="hasAuthority('PROFESSOR')">
-    	<a th:href="@{/admin/dashboard}" class="btn btn-primary btn-sm mb-3"> Admin Dashboard</a>
+    	<a th:href="@{/professor/dashboard}" class="btn btn-primary btn-sm mb-3"> Professor Dashboard</a>
     	<a th:href="@{/logout}" class="btn btn-danger btn-sm mb-3"> Logout</a>	
     </p>
 
